fixed header links on mobile

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1em;
-  padding: 1em;
+  padding: 0.5em;
   background-color: var(--primary);
   user-select: none;
 }
